tests/negative/symbols/uppercase-fn.orng
fn Lol() -> Int { 4 }